# sentinel-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: anti-ai.yml  ci.yml
docs/: architecture.md  demo-scenarios.md  detections.md  triage-playbooks.md
issues/: mvp.md  post-mvp.md
rules/: cloudtrail_tampering.yaml  console_login_without_mfa.yaml  public_sensitive_port_exposure.yaml  root_account_usage.yaml  security_hub_high_severity.yaml  suspicious_privileged_assume_role.yaml
samples/: README.md
samples/cloudtrail/: assume_role_privileged.json  cloudtrail_stop_logging.json  root_console_login.json  security_group_open_ssh.json
samples/guardduty/: credential_access_finding.json
samples/securityhub/: iam_root_mfa_finding.json
scripts/: enforce_legality.sh  replay-samples.sh
src/sentinel_forge/: __init__.py  __main__.py  cli.py  database.py  detections.py  ingest.py  logger.py  models.py  normalize.py  pipeline.py  registry.py  replay.py  reporting.py  timeline.py
tests/: test_cli_pipeline.py  test_detections.py  test_industry_features.py  test_ingest.py  test_ingest_errors.py  test_models.py  test_normalize.py  test_reporting.py
